adjust reset.css and subsequent spacing issues

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -19,6 +19,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	margin: 0px;
+	padding: 0px;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
